index.html 위치 수정

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>캐릭터 톡</title>
-        <link href="./css/index.css" rel="stylesheet" />
+        <link href="./src/css/index.css" rel="stylesheet" />
     </head>
     <body>
         <!-- page common mobile header -->
@@ -39,7 +39,7 @@
                     <div class="index_form_box">
                         <form
                             class="index_form"
-                            action="./html/friends.html"
+                            action="./src/html/friends.html"
                             method="get"
                         >
                             <input
@@ -52,6 +52,8 @@
                                 type="password"
                                 class="index_input"
                                 placeholder="비밀번호 입력"
+                                minlength="5"
+                                maxlength="10"
                                 required
                             />
                             <button type="submit" class="index_btn_login">
