--- a/src/html/find.html
+++ b/src/html/find.html
@@ -111,8 +111,8 @@
                                     <div class="openchat_tags ellipsis">
                                         <span class="tag">#침착맨</span>
                                         <span class="tag">#주펄</span>
-                                        <span class="tag">#</span>
-                                        <span class="tag">#캄다운맨</span>
+                                        <span class="tag">#풍전무님</span>
+                                        <span class="tag">#배도라지</span>
                                     </div>
                                     <div class="openchat_status">
                                         <div class="status_thumb">
@@ -147,6 +147,7 @@
                                     >
                                     <div class="openchat_tags ellipsis">
                                         <span class="tag">#경제</span>
+                                        <span class="tag">#역사채널</span>
                                         <span class="tag">#새우</span>
                                         <span class="tag">#개그유튜버</span>
                                         <span class="tag">#시사상식</span>
@@ -244,9 +245,10 @@
                             class="nav_link"
                             aria-selected="false"
                             ><span class="nav_ico"
-                                ><i class="fas fa-ellipsis-h fa-2x"></i><span class="nav_badge_new">new</span></span
-                                ></span
-                        ></a>
+                                ><i class="fas fa-ellipsis-h fa-2x"></i
+                                ><span class="nav_badge_new">new</span></span
+                            ></a
+                        >
                     </li>
                 </ul>
             </nav>
