--- a/src/html/setting.html
+++ b/src/html/setting.html
@@ -30,7 +30,7 @@
         <main class="main_wrap">
             <!-- kokoa header -->
             <header class="inner_header">
-                <a href="#" class="inner_link_back"><i class="fas fa-chevron-left fa-lg"></i></a>
+                <a href="./more.html" class="inner_link_back"><i class="fas fa-chevron-left fa-lg"></i></a>
                 <h1 class="inner_header_title ellipsis">설정</h1>
                 <div class="inner_links">
                     <a href="./find.html" class="inner_link_search"
