--- a/src/html/friends.html
+++ b/src/html/friends.html
@@ -355,6 +355,17 @@
             </nav>
         </main>
         <div id="splash_layer"><i class="fas fa-comment fa-6x"></i></div>
+        <div id="pc_banner">
+            <div class="pc_banner_icon">
+                <i class="fas fa-sad-tear fa-4x"></i>
+            </div>
+            <p class="pc_banner_msg">
+                이 앱은 모바일 전용입니다.<br />PC 또는 태블릿 전용 앱을
+                다운으로 받아주세요.
+            </p>
+            <a href="#" class="pc_link">PC 전용 앱 다운로드</a>
+            <a href="#" class="pc_link">태블릿 전용 앱 다운로드</a>
+        </div>
         <script
             src="https://kit.fontawesome.com/6478f529f2.js"
             crossorigin="anonymous"
